--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,8 +204,8 @@ p {
   line-height: 1;
   font-weight: 600;
   letter-spacing: 1px;
-  font-family: "Playfair Display", sans-serif;
-  font-style: italic;
+  font-family: "Playfair Display", serif;
+  font-style: bold;
 }
 
 #header .logo a {
