--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,7 +448,7 @@ p {
 # Hero
 --------------------------------------------------------------*/
 #hero {
-  background: url("../img/home-bg-2.jpg") repeat scroll center center/cover;
+  background: url("../img/home-bg-1-v2.png") repeat scroll center center/cover;
   height: 100vh;
   width: 100%;
 }
