--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
   box-sizing: border-box;
 }
 
+
 h1,
 h2,
 h3,
@@ -643,6 +644,8 @@ p {
 #portfolio {
   position: relative;
   padding-bottom: 50px;
+  overflow-y: scroll;
+  height: 100vh; /* or any other height you prefer */
 }
 
 #portfolio #portfolio-flters {
